add additional info modifications converter to damsel model + expand … (#44)
* add additional info modifications converter to damsel model + expand contact info

* fix checkstyle

---------

Co-authored-by: ggmaleva <ggmaleva@yandex.ru>